fixed right side gap, cardbody left margin

--- a/client/src/App.global.css
+++ b/client/src/App.global.css
@@ -18,7 +18,6 @@ body {
   /* font-family: 'Segoe UI', Candara, 'Bitstream Vera Sans', 'DejaVu Sans',
     'Bitstream Vera Sans', 'Trebuchet MS', Verdana, 'Verdana Ref', sans serif; */
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-weight: 400;
   overflow-y: hidden;
   overflow-x: hidden;
   margin: auto;
